send http like response